--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,32 @@
                     <include>**/*</include>
                 </includes>
             </resource>
-        </resources>                
+        </resources>  
+        
+        <plugins>          
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <minimizeJar>false</minimizeJar>
+                            <artifactSet>
+                                <includes>                                   
+                                    <include>org.xerial:sqlite-jdbc</include>
+                                    <include>mysql:mysql-connector-java</include>
+                                </includes>
+                            </artifactSet>                           
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>          
+        </plugins>                      
     </build>
     
     <dependencies>                                      
@@ -34,12 +59,30 @@
             <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.7</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
     
     <repositories>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>                    
+        </repository> 
+        <repository>
+            <id>vi-repo</id>
+            <url>http://repo.visualillusionsent.net/repository/public</url>
+        </repository>
+        <repository>
+            <id>Sonatype-public</id>
+            <url>http://oss.sonatype.org/content/groups/public/</url>
+        </repository>                   
     </repositories>
 </project>
