--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,31 @@
     <artifactId>AdminCMD</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <inceptionYear>2015</inceptionYear>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+    
+    <scm>
+        <connection>scm:git:git@github.com:AdminCMD/AdminCMD.git</connection>
+        <url>scm:git:git@github.com:AdminCMD/AdminCMD.git</url>
+        <developerConnection>scm:git:git@github.com:AdminCMD/AdminCMD.git</developerConnection>
+    </scm>
+    
+    <organization>
+        <name>AdminCmd Team</name>
+        <url>http://www.admincmd.com</url>
+    </organization>
+    
+    <licenses>
+        <license>
+            <name>GNU GPL v3</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+        </license>
+    </licenses>
     
     <distributionManagement>
         <repository>
@@ -56,8 +75,114 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>          
-        </plugins>                      
+            </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>1.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <dateFormat>dd.MM.yyyy '@' HH:mm:ss</dateFormat>
+                    <verbose>true</verbose>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                    <generateGitPropertiesFile>false</generateGitPropertiesFile>
+                    <generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
+                </configuration>
+            </plugin>  
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>jxr-maven-plugin</artifactId>
+                            <version>2.0-beta-1</version>
+                            <configuration>
+                                <linkJavadoc>true</linkJavadoc>
+                                <javadocDir>${project.reporting.outputDirectory}/AdminCMD/apidocs</javadocDir>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.7</version>
+                            <configuration>
+                                <linksource>true</linksource>
+                                <splitindex>true</splitindex>
+                            </configuration>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>javadoc</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.7</version>
+                            <configuration>
+                                <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
+                                <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
+                                <webAccessUrl>https://github.com/AdminCMD/AdminCMD</webAccessUrl>
+                                <anonymousConnection>scm:git:git@github.com:AdminCMD/AdminCMD.git</anonymousConnection>
+                                <developerConnection>scm:git:git@github.com:AdminCMD/AdminCMD.git</developerConnection>
+                            </configuration>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>index</report>
+                                        <report>dependencies</report>
+                                        <report>issue-tracking</report>
+                                        <report>license</report>
+                                        <report>project-team</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+                    </reportPlugins>
+                </configuration>
+            </plugin>        
+        </plugins>  
+        <pluginManagement>
+            <plugins>               
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>pl.project13.maven</groupId>
+                                        <artifactId>
+                                            git-commit-id-plugin
+                                        </artifactId>
+                                        <versionRange>[1.3,)</versionRange>
+                                        <goals>
+                                            <goal>revision</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore />
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>                    
     </build>
     
     <dependencies>                                      
