--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,11 @@
             <artifactId>ProtocolLib</artifactId>
             <version>3.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>Vault</artifactId>
+            <version>1.5.2</version>
+        </dependency>
     </dependencies>
     
     <repositories>
@@ -228,6 +233,10 @@
         <repository>
             <id>ProtocolLib-Repo</id>
             <url>http://repo.dmulloy2.net/content/groups/public/</url>
+        </repository> 
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
         </repository>              
     </repositories>
 </project>
