--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,8 @@
                         <configuration>
                             <minimizeJar>false</minimizeJar>
                             <artifactSet>
-                                <includes>                                   
+                                <includes>         
+                                    <include>de.TheJeterLP.Bukkit:Updater</include>                          
                                     <include>org.xerial:sqlite-jdbc</include>
                                     <include>mysql:mysql-connector-java</include>
                                 </includes>
@@ -210,6 +211,12 @@
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
             <version>1.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.TheJeterLP.Bukkit</groupId>
+            <artifactId>Updater</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     
